# omjl

./: juliapkg.json  pyproject.toml  setup.cfg  setup.py
omjl/: julia_comps.py  juliapkg.json
src/omjl/: julia_comps.py
tests/: test_ecomp.py  test_icomp.py
