[metadata]
name = omjl
version = 0.1.0
author = Daniel Ingraham and contributors
author_email = d.j.ingraham@gmail.com
description = OpenMDAO wrapper Components for the Julia programming language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dingraha/omjl.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    openmdao

[options.packages.find]
where = src￼
